# yomu

./: LICENSE  README.md  docker-compose.yml
bot/: .env  Dockerfile  main.py  pyproject.toml
client/: .env  bun.lockb  package.json  tsconfig.app.json  vercel.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/api/: chapter.ts  client.ts  history.ts  library.ts  manga.ts  progress.ts  user.ts
client/src/app/: App.tsx
client/src/components/: Chapter.tsx  Detail.tsx  Empty.tsx  Gallery.tsx  Header.tsx  NavButton.tsx  Navbar.tsx  Option.tsx  Search.tsx
client/src/hooks/: client.ts
client/src/pages/: Browse.tsx  Library.tsx  Manga.tsx  View.tsx
client/src/types/: Detail.ts  Manga.ts  User.ts  UserData.ts  chapter.ts  detail.ts  fetch.ts  history.ts  index.ts  manga.ts  user.ts
server/: Dockerfile  Makefile  go.mod  go.sum
server/api/: chapter.go  history.go  library.go  library_service.go  manga.go  manga_service.go  middleware.go  progress.go  server.go  user.go  user_service.go
server/api/docs/: docs.go  swagger.json  swagger.yaml
server/api/handlers/: chapter.go  handler.go  history.go  library.go  manga.go  progress.go  user.go
server/api/middleware/: auth.go  cors.go  middleware.go
server/api/server/: chapter.go  library.go  manga.go  server.go  user.go
server/api/types/: chapter.go  history.go  library.go  (+3 more)
server/cmd/: main.go
server/db/: history.go  library.go  library_db.go  models.go  progress.go  store.go  user.go  user_db.go
server/internal/: claim.go  config.go  middleware.go  scrape.go  token.go
(+29 files in other folders)
